--- a/wagtail/wagtailsites/templates/wagtailsites/_form.html
+++ b/wagtail/wagtailsites/templates/wagtailsites/_form.html
@@ -1,4 +1,5 @@
 {% include "wagtailadmin/shared/field_as_li.html" with field=form.hostname %}
 {% include "wagtailadmin/shared/field_as_li.html" with field=form.port %}
+{% include "wagtailadmin/shared/field_as_li.html" with field=form.wsgi_port %}
 {% include "wagtailadmin/shared/field_as_li.html" with field=form.root_page %}
 {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_default_site %}
